fix(content): remove layout contain to fix fab behind toolbar
related to ionic-team/ionic#16780 fixes #919

--- a/src/components/content/content.scss
+++ b/src/components/content/content.scss
@@ -12,7 +12,7 @@ ion-content {
   width: 100%;
   height: 100%;
 
-  contain: layout size style;
+  contain: size style;
 }
 
 .ion-page > ion-content {
